// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChickenEditor component: Should render in add new mode 1`] = `
<ChickenEditorRenderer
  onFieldChanged={[Function]}
/>
`;

exports[`ChickenEditor component: Should render in edit mode 1`] = `
<ChickenEditorRenderer
  name="The First Chicken"
  onFieldChanged={[Function]}
/>
`;
